src/objects/Apttus_Config2__SearchAttributeValue__c.object
<CustomObject>
    <description>Holds product search parameters and default values for line items</description>
    <fields>
        <fullName>Apttus_Config2__BaseProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated base product</description>
        <label>Base Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Search Attribute Values</relationshipLabel>
        <relationshipName>SearchAttributeValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CategoryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated category.</description>
        <label>Category</label>
        <referenceTo>Apttus_Config2__ClassificationName__c</referenceTo>
        <relationshipLabel>Search Attribute Values</relationshipLabel>
        <relationshipName>SearchAttributeValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigurationId__c</fullName>
        <description>ID of the associated configuration</description>
        <label>Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Search Attribute Values</relationshipLabel>
        <relationshipName>SearchAttributeValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EndDate__c</fullName>
        <description>The default end date for a line item</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Family__c</fullName>
        <description>Search field to search by product family</description>
        <label>Product Family</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InterviewName__c</fullName>
        <defaultValue>&quot;Default&quot;</defaultValue>
        <description>The name of the associated guided interview which uses the search attribute values (or answers) to build the search filter.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Interview Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductCode__c</fullName>
        <description>Search fiield for Product Code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ResetFromGlobal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to reset from global before using the search values. This flag is set to true when global values are modified. It is set to false when global values are set into the record.</description>
        <label>Reset From Global</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StartDate__c</fullName>
        <description>The default start date for a line item</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ValueType__c</fullName>
        <description>Specifies the search context.</description>
        <label>Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                    <default>true</default>
                    <label>Product</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GIC__c</fullName>
        <label>GIC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TEST</fullName>
                </value>
                <value>
                    <fullName>00055038.00</fullName>
                </value>
                <value>
                    <fullName>00055039.00</fullName>
                </value>
                <value>
                    <fullName>00060248.00</fullName>
                </value>
                <value>
                    <fullName>00060352.00</fullName>
                </value>
                <value>
                    <fullName>00062954.00</fullName>
                </value>
                <value>
                    <fullName>00062978.00</fullName>
                </value>
                <value>
                    <fullName>00080567.00</fullName>
                </value>
                <value>
                    <fullName>P346407</fullName>
                </value>
                <value>
                    <fullName>P346410</fullName>
                </value>
                <value>
                    <fullName>P361645</fullName>
                </value>
                <value>
                    <fullName>P384052</fullName>
                </value>
                <value>
                    <fullName>P489560</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Classification2__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Undefined</fullName>
                </value>
                <value>
                    <fullName>LK only delivery</fullName>
                </value>
                <value>
                    <fullName>Standard SW (STD)</fullName>
                </value>
                <value>
                    <fullName>High Value SW (HVF)</fullName>
                </value>
                <value>
                    <fullName>Non-visible licence/maintenance</fullName>
                </value>
                <value>
                    <fullName>Application Software (ASW)</fullName>
                </value>
                <value>
                    <fullName>SW Release Upgrade (SWRU)</fullName>
                </value>
                <value>
                    <fullName>Maintain</fullName>
                </value>
                <value>
                    <fullName>SW Maintenance</fullName>
                </value>
                <value>
                    <fullName>Train</fullName>
                </value>
                <value>
                    <fullName>Functional SW delivery</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>SW Capacity (CAP)</fullName>
                </value>
                <value>
                    <fullName>Deploy</fullName>
                </value>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Basic Software (BSW)</fullName>
                </value>
                <value>
                    <fullName>Integrate</fullName>
                </value>
                <value>
                    <fullName>Cloud Enablement SW (CES)</fullName>
                </value>
                <value>
                    <fullName>SW Release Subscription (SRS)</fullName>
                </value>
                <value>
                    <fullName>ASW High Value</fullName>
                </value>
                <value>
                    <fullName>Extra High Value (EHVF)</fullName>
                </value>
                <value>
                    <fullName>SW Maintenance (SWM)</fullName>
                </value>
                <value>
                    <fullName>Customer Specific Software (CSS)</fullName>
                </value>
                <value>
                    <fullName>ASW Capacity</fullName>
                </value>
                <value>
                    <fullName>BSW Capacity</fullName>
                </value>
                <value>
                    <fullName>Optimize</fullName>
                </value>
                <value>
                    <fullName>Mechanic</fullName>
                </value>
                <value>
                    <fullName>Care Technical Support</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Customisation Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NokiaCPQ_State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Implement</fullName>
                </value>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Ramp Up</fullName>
                </value>
                <value>
                    <fullName>Release</fullName>
                </value>
                <value>
                    <fullName>Ramp Down</fullName>
                </value>
                <value>
                    <fullName>Field Maintenance</fullName>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
                <value>
                    <fullName>Maintain</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Search Attribute Value</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Search Attribute Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search Attribute Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>